--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <h1>Spell's Demo Home</h1>
-  <p>It worked!</p>
+  <h1>Spell's Demo Home 2</h1>
+  <img src="https://i.imgflip.com/5mf9pr.jpg" title="this was not easy...."/>
 
 </div>
