--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
   <h1>Spell's Demo Home</h1>
-  <p>It worked!</p>
+  <img src="https://i.imgflip.com/5mff9q.jpg" title="holy crap!!!"/>
 
 </div>
